# liteGPT

./: main.py  pyproject.toml
litegpt/: chat.py  dataset.py  model.py  optimizer.py  sft_dataset.py  sft_train.py  tokenizer.py  train.py
scripts/: prepare_data.py  smoke.sh  train.sh
